clang/test/BSC/Negative/Ownership/RuleCheck/own_borrow_conflict/own_borrow_conflict.cbs
// RUN: %clang_cc1 -verify %s

void test(int *owned borrow p) { // expected-error {{cannot combine 'owned' and 'borrow' qualifiers on the same type}}
  int *owned borrow q = p; // expected-error {{cannot combine 'owned' and 'borrow' qualifiers on the same type}}
  int *owned borrow *pp =p; //#1
}
// expected-error@#1 {{cannot combine 'owned' and 'borrow' qualifiers on the same type}}
// expected-error@#1 {{incompatible owned types, cannot cast 'int *owned borrow' to 'int *owned borrow *'}}
